test/zinc_source/compile_errors/structs/14_anon_incompatible_nested_shape.zn
// expected-error: parameter 'post' expects a compatible 'struct\{meta:struct\{author:stringactive:bool\}\}' value

fn publish(post: struct {
    meta: struct {
        author: string
        active: bool
    }
}) {
    print(post.meta.author)
}

fn main() {
    post = struct {
        meta: struct {
            author: "alice"
            score: 10
        }
    }
    publish(post)
}
